syntax = "proto3";

import "Protos/Shared.proto";

option csharp_namespace = "BonusBotConnector.Client";

service MessageToChannel {
    rpc Send (MessageToChannelRequest) returns (MessageToChannelRequestReply);
    rpc SendEmbed (EmbedToChannelRequest) returns (MessageToChannelRequestReply);
}

message MessageToChannelRequest {
    string text = 1;
    uint64 guildId = 2;
    uint64 channelId = 3; 
}

message EmbedToChannelRequest {
    uint64 guildId = 1;
    uint64 channelId = 2; 
    string author = 3;
    repeated EmbedField fields = 4;
    // Use -1 to not use a color or to use default (255) if other color is set
    sint32 colorR = 5;
    // Use -1 to not use a color or to use default (255) if other color is set
    sint32 colorG = 6;
    // Use -1 to not use a color or to use default (255) if other color is set
    sint32 colorB = 7;
    string title = 8;
}

message MessageToChannelRequestReply {
    string errorMessage = 1;
}
