syntax = "proto3";

option csharp_namespace = "BonusBotConnector.Client";

message EmbedField {
    string name = 1;
    string value = 2;
}
